--- a/Retail_17.8.2.ipynb
+++ b/Retail_17.8.2.ipynb
@@ -13,6 +13,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Look at Data First"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -656,19 +670,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Explore cases when Count=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -767,7 +774,7 @@
        "39     A29  11-7270-00007-00060     9 -475.000  0.000  3/11/12 00:00  A15257"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
