--- a/Retail_17.8.2.ipynb
+++ b/Retail_17.8.2.ipynb
@@ -11,16 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**I am a store manager, what can I do to enhance my revenue across 100 stores?**  \n",
+    "- I am a store manager, what can I do to enhance my revenue across 100 stores?  \n",
     "\n",
-    "**When I discount some items, will that drive up average sales per basket？** \n",
+    "- When I discount some items, will that drive up average sales per basket？\n",
     "\n",
-    "** Some product may have elasticity of demand, other product may not (Once I step into the store, I am going to start browsing and I am gonna buying more stuff I probably won't need. So that's what they want, they want to change people's behavior. If you markdown the price of merchandise, it's going to drive up sales of products.) (Percent change in demand is more than percent change in price)**  \n",
+    "- Some product may have **elasticity of demand**, other product may not (Once I step into the store, I am going to start browsing and I am gonna buying more stuff I probably won't need. So that's what they want, they want to change people's behavior. If you markdown the price of merchandise, it's going to drive up sales of products.) (Percent change in demand is more than percent change in price) \n",
     "\n",
-    "**Cross-selling: what are the prodcuts that people tend to buy together. Association Rule.**  \n",
-    "**Upselling: Salesperson tries to persuade customers to buy a higher-end product, an upgrade or the newest version of an item.**  \n",
+    "- Cross-selling: what are the prodcuts that people tend to buy together. Association Rule.  \n",
+    "- Upselling: Salesperson tries to persuade customers to buy a higher-end product, an upgrade or the newest version of an item.\n",
     "\n",
-    "** Shall we markdown? How much shall we markdown? Does it make sense to markdown? Product Category?**"
+    "- Shall we markdown? How much shall we markdown? Does it make sense to markdown? Product Category?"
    ]
   },
   {
