--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -326,7 +326,7 @@
    "metadata": {},
    "source": [
     "- The records are organized on a SKU level by each transaction within each store, for each day.\n",
-    "- In each row, on average, the count will be 1 and sales will be $1800"
+    "- In each row, the count will be 1 and the sales will be $1800 on average."
    ]
   },
   {
@@ -632,7 +632,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each store, on average, there are 2600 transactions and 2700 unique SKUs will be sold. The average sales per basket is $9600."
+    "For each store, there will have 2600 transactions and 2700 unique SKUs will be sold on average.\n",
+    "\n",
+    "The average sales per basket is $9600."
    ]
   },
   {
@@ -914,10 +916,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q='''\n",
+    "  select\n",
+    "      SKU, sum(Sales) as Total_Sales, sum(Count) as Total_Count, count(distinct TransactionID) as Number_of_Transactions\n",
+    "  from\n",
+    "      data_type\n",
+    "  where\n",
+    "      StoreID='A97'\n",
+    "  group by\n",
+    "      SKU\n",
+    "'''\n",
+    "df1_2=pysqldf(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SKU</th>\n",
+       "      <th>Total_Sales</th>\n",
+       "      <th>Total_Count</th>\n",
+       "      <th>Number_of_Transactions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A10644</td>\n",
+       "      <td>4500.000</td>\n",
+       "      <td>3.000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A10809</td>\n",
+       "      <td>273350.000</td>\n",
+       "      <td>781.000</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A1092</td>\n",
+       "      <td>1312.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      SKU  Total_Sales  Total_Count  Number_of_Transactions\n",
+       "0  A10644     4500.000        3.000                       2\n",
+       "1  A10809   273350.000      781.000                      68\n",
+       "2   A1092     1312.000        1.000                       1"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_2.head(3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For store A85, most of sales come from SKU A10644 and SKU A10809."
+    "For store A85 and A97, most of sales come from SKU A10644 and SKU A10809. "
    ]
   },
   {
@@ -1316,7 +1416,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For specific SKU, on average, it wil be sold across 13 stores and 45 transactions. The average unit price for each SKU is $6500/item."
+    "For specific SKU, it wil be sold across 13 stores and 45 transactions on average. \n",
+    "\n",
+    "The average unit price for each SKU is $6500/item."
    ]
   },
   {
@@ -2341,6 +2443,72 @@
    "metadata": {},
    "source": [
     "Avearge number of unique SKUs in each transaction is 4, average total sales in each transaction is $9600, and average number of items bought in each transaction is 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TransactionID</th>\n",
+       "      <th>Number_of_SKUs</th>\n",
+       "      <th>Total Sales</th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Unit Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>188984</th>\n",
+       "      <td>12-7681-00002-00002</td>\n",
+       "      <td>132</td>\n",
+       "      <td>1011399.000</td>\n",
+       "      <td>150.000</td>\n",
+       "      <td>6742.660</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              TransactionID  Number_of_SKUs  Total Sales  Total Count  \\\n",
+       "188984  12-7681-00002-00002             132  1011399.000      150.000   \n",
+       "\n",
+       "        Unit Price  \n",
+       "188984    6742.660  "
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3[df3['Total Sales']==1011399]"
    ]
   },
   {
