--- a/Retail_17.9.27.ipynb
+++ b/Retail_17.9.27.ipynb
@@ -5547,7 +5547,7 @@
     "\n",
     "**Metrics:** Proportion of the SKU when (not) discounted within a store\n",
     "\n",
-    "**Calculation Method:**  total # (not) discounted items bought for this SKU within a store / total # items bought across transactions with (without) discounted items within a store\n",
+    "**Calculation Method:** # (not discounted) discounted items bought for this SKU within a store / Total # items bought across transactions with (without) discounted items for this SKU within a store\n",
     "\n"
    ]
   },
